# libdukpt

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  index.html  ix01.html  libdukpt-Encryption-and-decryption.html  libdukpt-Key-management.html  libdukpt-Library-version.html  libdukpt.devhelp2  pt01.html
doc/reference/: Makefile.am  libdukpt-docs.xml  libdukpt-sections.txt
m4/: compiler-warnings.m4
src/: Makefile.am  dukpt.c  dukpt.h  dukpt.h.in  dukpt.pc.in
test/: Makefile.am  dukpt-test.c
